# controllers/userloginasimetricoController.js
@@ -1,0 +1,7 @@
+'use strict'
+
+var varuserloginasimetricoController = require('./userloginasimetricoControllerService');
+
+module.exports.loginUserAsymm = function loginUserAsymm(req, res, next) {
+  // logica
+};
