# controllers/userloginasimetricoControllerService.js
@@ -1,0 +1,7 @@
+'use strict'
+
+module.exports.loginUserAsymm = function loginUserAsymm(req, res, next) {
+  res.send({
+    message: 'This is the mockup controller for loginUserAsymm'
+  });
+};
